2008-10-08  Christian Persch  <chpe@gnome.org>

	Bug 555555 – minor HIG layout problems in the prefs dialogue

	* data/file-share-properties.glade: Fix prefs dialogue border,
	spacings, strings to be HIG compliant. Add mnemonics.

2008-10-08  Bastien Nocera  <hadess@hadess.net>

	* src/obexpush.c (notification_launch_action_on_file_cb):
	Require gtk+ 2.14.0 now that it's out

2008-09-22  Bastien Nocera  <hadess@hadess.net>

	* src/obexpush.c (device_is_authorised), (cancelled_cb):
	Port to the BlueZ 4.x API (Closes: #522404)

=== gnome-user-share 0.40 ===

2008-09-22  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.40

2008-08-23  Baptiste Mille-Mathias  <baptiste.millemathias@gmail.com>

	* data/file-share-properties.glade:
	Modify GtkFrame widgets to avoid they expand on vertical resizing.
	(Closes: #549053)

2008-06-13  Baptiste Mille-Mathias

	* src/user-share.c (consolekit_init), (sessionchanged_cb):
	Check Active session using ConsolerKit, and disable obex sharing
	if the session is not the action one.
	<baptiste.millemathias@gmail.com> (Closes: #515553)

2008-06-12  Bastien Nocera  <hadess@hadess.net>

	* src/obexpush.c (notification_launch_action_on_file_cb),
	(show_notification): Add a "Reveal File" button on the transfer
	notifications, patch by Baptiste Mille-Mathias
	<baptiste.millemathias@gmail.com> (Closes: #534794)

2008-05-25  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/file-share-properties.c (main):
	* src/obexpush.c (hide_statusicon), (on_close_notification),
	(launch_viewer_for_file), (show_notification), (show_icon),
	(transfer_completed_cb), (obexpush_init), (obexpush_set_notify):
	Implement notifications when transfers are received, so people
	can open the received files, based on work by Baptiste Mille-Mathias
	<baptiste.millemathias@gmail.com> (Closes: #519060)

2008-04-22  Bastien Nocera  <hadess@hadess.net>

	* data/dav_user_2.2.conf.in: Patch from Thorsten Vollmer