@@ -8,11 +8,11 @@ DAVLockDB lock
 
 LimitXMLRequestBody 100000
 
-LoadModule dav_module @HTTP_MODULES_PATH@mod_dav.so
-LoadModule dav_fs_module @HTTP_MODULES_PATH@mod_dav_fs.so
-LoadModule authn_file_module @HTTP_MODULES_PATH@mod_authn_file.so
-LoadModule auth_digest_module @HTTP_MODULES_PATH@mod_auth_digest.so
-LoadModule authz_groupfile_module @HTTP_MODULES_PATH@mod_authz_groupfile.so
+LoadModule dav_module @HTTP_MODULES_PATH@/mod_dav.so
+LoadModule dav_fs_module @HTTP_MODULES_PATH@/mod_dav_fs.so
+LoadModule authn_file_module @HTTP_MODULES_PATH@/mod_authn_file.so
+LoadModule auth_digest_module @HTTP_MODULES_PATH@/mod_auth_digest.so
+LoadModule authz_groupfile_module @HTTP_MODULES_PATH@/mod_authz_groupfile.so
 
 DocumentRoot ${XDG_PUBLICSHARE_DIR}
 <Directory "${XDG_PUBLICSHARE_DIR}">
