@@ -1,3 +1,8 @@
+2008-11-27  Bastien Nocera  <hadess@hadess.net>
+
+	* data/dav_user_2.2.conf.in: Fix httpd startup error when
+	the module_path doesn't have a trailing slash (Closes: #561621)
+
 2008-10-08  Christian Persch  <chpe@gnome.org>
 
 	Bug 555555 – minor HIG layout problems in the prefs dialogue
